middleware and ui can handle ai promotion